# game_attempt

./: Cargo.toml  w.txt
assets/levels/: death  l1  l2  l3
src/: consts.rs  input.rs  internals.rs  main.rs  medit.rs  render.rs
src/consts/: colors.rs  layers.rs  objects.rs
src/internals/: controls.rs  levels.rs  object.rs  partition_map.rs
src/render/: animation.rs  composite.rs  rect.rs  text.rs  texture.rs  toggle.rs
