[package]
name = "game_attempt"
version = "0.1.0"
authors = ["Sudo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
piston = "0.53.1"
piston2d-graphics = "0.42.0"
piston_window = "0.124.0"
piston2d-opengl_graphics = "0.81.0"
rusttype = "0.9.2"
fnv = "1.0.6"
serde = {version = "1.0.137", features = ["derive"]}
bincode = "1.3.3"
